--- a/EXs/interface-contratos/views/entidade.pug
+++ b/EXs/interface-contratos/views/entidade.pug
@@ -26,6 +26,6 @@ block content
                         td= contrato.entidade_comunicante
             h2 Somatório dos Valores dos Contratos
             span.w3-large #{somatorioContratos} €
-        footer.w3.container.w3-blue 
+        footer.w3.container.w3-padding.w3-blue 
             adress
                 a(href='/') Voltar à Lista de Contratos
